--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -459,7 +459,7 @@ fieldset button {
     padding: 12px;
 }
 
-input:focus, textarea:focus, #contact-submit:focus {
+input:focus, textarea:focus {
 	outline:0;
 	background-color: #e6e5e5;
 }
@@ -474,6 +474,15 @@ input:hover, textarea:hover, button#contact-submit:hover {
 	/*background-color: #a9a9a9;*/
 	background-color:#e6e5e5; 
 	/*background-color: #00B241;*/
+}
+
+button#contact-submit:hover, #contact-submit:focus {
+	background-color: #15c756;
+}
+
+button.disabled {
+	background: #ccc;
+	color: #989898;
 }
 
 input, textarea {
